--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bulma": "^0.8.0",
+    "gmaps": "^0.4.24",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
